Updating for new wedding details and live stream link

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="alert">
 			<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-			<h2>Plans change, our love has not.<br></h2>
-			We've made the difficult decision to forgo the wedding we originally planned. We invite you to join us virtually at 1:00 PM on May 30th, 2020 to witness our ceremony. We will provide a direct link here prior to the event. Please check back for further updates soon.
+			<h2>Live Stream<br></h2>
+			To live stream the wedding, click the link below that says "Live Stream"
 		</div>
 		<div class="header-bottom">
 			<div class="container">
@@ -97,7 +97,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="w3ls-banner-info">
 						<p>May 30, 2020 | Grand Rapids, MI</p>
 						<div class="w3ls-button">
-							<a href="about.html">Read More</a>
+							<a href="https://youtu.be/ZfqFmdDfS3g">Live Stream</a>
 						</div>
 					</div>
 				</div>
@@ -123,6 +123,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="agileits_w3layouts_events_grid_social">
 						<ul class="agileinfo_social_icons">
 							<li><a href="https://www.basilicagr.com" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="agile_banner_bottom_grids">
+				<div class="agile_events_grid">
+					<img src="images/parade.jpg" alt=" " class="img-responsive" />
+					<div class="agile_events_grid_pos_sub agile_events_grid_pos1">
+						<h5><span>7:00pm</span> 5/30/2020</h5>
+						<h4>First Dance Parade</h4>
+						<p>Smith Family Home | 3950 Lake Point Dr, Norton Shores, MI 49441, USA</p>
+					</div>
+					<div class="agileits_w3layouts_events_grid_social1">
+						<ul class="agileinfo_social_icons">
+							<li><a href="https://www.google.com/maps/place/3950+Lake+Point+Dr,+Norton+Shores,+MI+49441/data=!4m2!3m1!1s0x881bd5e8bfce78c3:0xf60db5ac9dc40cef?sa=X&ved=2ahUKEwidyojestnpAhUXHM0KHV9kAAEQ8gEwAHoECAsQAQ" class="w3ls_globe"><i class="fa fa-globe" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
 				</div>
